fix webclipper fonts

--- a/extension/scss/common.scss
+++ b/extension/scss/common.scss
@@ -52,6 +52,52 @@ html.anytypeWebclipper-popup {
 	--color-lime: #5dd400;
 	--color-green: #57c600;
 
+	/* Font */
+
+	--font-size-9: 9px;
+	--line-height-9: 12px;
+	--letter-spacing-9: 0.14px;
+
+	--font-size-very-small: 11px; 
+	--line-height-very-small: 18px; 
+	--letter-spacing-very-small: 0.2px;
+
+	--font-size-small: 12px; 
+	--line-height-small: 18px; 
+	--letter-spacing-small: 0px;
+
+	--font-size-common: 14px; 
+	--line-height-common: 22px; 
+	--letter-spacing-common: -0.12px;
+
+	--font-size-paragraph: 16px; 
+	--line-height-paragraph: 24px; 
+	--letter-spacing-paragraph: -0.2px;
+
+	--font-size-title: 36px; 
+	--line-height-title: 40px; 
+	--letter-spacing-title: -0.64px; 
+	--font-weight-title: 700;
+
+	--font-size-header1: 28px; 
+	--line-height-header1: 32px; 
+	--letter-spacing-header1: -0.56px; 
+	--font-weight-header1: 700;
+
+	--font-size-header2: 22px; 
+	--line-height-header2: 28px; 
+	--letter-spacing-header2: -0.48px; 
+	--font-weight-header2: 700;
+
+	--font-size-header3: 18px; 
+	--line-height-header3: 26px; 
+	--letter-spacing-header3: -0.28px; 
+	--font-weight-header3: 700;
+
+	--font-size-description: 18px; 
+	--line-height-description: 26px; 
+	--letter-spacing-description: -0.28px;
+
 	@import "~scss/common.scss";
 	@import "~scss/form/common.scss";
 	@import "~scss/component/common.scss";
